name:                beseder
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/oofp/Beseder#readme
license:             OtherLicense
license-file:        LICENSE
author:              oofp
maintainer:          oofp
copyright:           2018-2020 oofp
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag TimerExample
  Description: Enable build of timer example (medium compile time)
  Default:     False
  Manual:      False

Flag CommExample
  Description: Enable build of Comm example (longer compile time)
  Default:     False
  Manual:      False

Flag DoorExample
  Description: Enable build of Door example (shorter compile time)
  Default:     False
  Manual:      False

library 
  hs-source-dirs:      src
  ghc-options:         -Wall -fomit-interface-pragmas -fprint-potential-instances  -fno-warn-unticked-promoted-constructors 
  exposed-modules:     Beseder.Base.Base
                     , Beseder.Base.Control
                     , Beseder.Base.Common
                     , Beseder.Utils
                     , Beseder.Resources.State.MonoStateRes
                     , Beseder.Resources.State.DataRes
                     , Beseder.Resources.State.PureRes
                     , Beseder.Resources.State.StateLogger  
                     , Beseder.Resources.Timer
                     , Beseder.Resources.Comm
                     , Beseder.Resources.Composite
                     , Beseder.Misc.Misc
                     , Beseder.Base.Internal.STransFunc
                     , Beseder.Base.Internal.Instruments
  other-modules:       Beseder.Base.Internal.Classes
                     , Beseder.Base.Internal.Cont
                     , Beseder.Base.Internal.Core
                     , Beseder.Base.Internal.Flow
                     , Beseder.Base.Internal.Named
                     , Beseder.Base.Internal.NamedVar
                     , Beseder.Base.Internal.STrans
                     , Beseder.Base.Internal.STransInstr
                     , Beseder.Base.Internal.STransDo
                     , Beseder.Base.Internal.SplitFlow
                     , Beseder.Base.Internal.SplitOps
                     , Beseder.Base.Internal.TupleHelper
                     , Beseder.Base.Internal.TypeExp
                     , Beseder.Utils.ListHelper
                     , Beseder.Utils.Lst
                     , Beseder.Utils.VariantHelper 
                     , Beseder.Misc.TaskPosterImpl.CallbackQueue
                     , Beseder.Misc.TaskPosterImpl.TaskQ
                     , Beseder.Resources.State.Impl.IORefStateProv
                     , Beseder.Resources.State.Impl.PureStateProv
                     , Beseder.Resources.State.Impl.STMStateProv
                     , Beseder.Resources.State.MonoStateProv  
                     , Beseder.Resources.Timer.TimerResImpl
                     , Beseder.Resources.Timer.TimerRes
                     , Beseder.Resources.Comm.CommProv
                     , Beseder.Resources.Comm.CommProvImpl
                     , Beseder.Resources.Comm.Impl.Console
                     , Beseder.Resources.Comm.Impl.WSClient
                     , Beseder.Resources.Composite.CompositeRes
                     , Beseder.Resources.Composite.CompositeHndRes
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , network
                     , text
                     , containers
                     , async
                     , stm
                     , haskus-utils
                     , mtl
                     , random
                     , websockets
                     , network
                     , bytestring
                     , template-haskell
                     , alarmclock
                     , type-errors
                     , pretty-simple
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/oofp/Beseder
