name:                beseder
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/oofp/Beseder#readme
license:             OtherLicense
license-file:        LICENSE
author:              oofp
maintainer:          oofp
copyright:           2018-2020 oofp
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag TimerExample
  Description: Enable build of timer example (medium compile time)
  Default:     False
  Manual:      False

Flag CommExample
  Description: Enable build of Comm example (longer compile time)
  Default:     False
  Manual:      False

library 
  hs-source-dirs:      src
  ghc-options:        -Wall 
                      -- -fwarn-redundant-constraints 
                      -fomit-interface-pragmas 
                      -- -fprint-potential-instances  
                      -fno-warn-unticked-promoted-constructors 
  exposed-modules:     Beseder.Base.Base
                     , Beseder.Base.Control
                     , Beseder.Base.ControlData
                     , Beseder.Base.Common
                     , Beseder.Utils
                     , Beseder.Resources.State.MonoStateRes
                     , Beseder.Resources.State.DataRes
                     , Beseder.Resources.State.PureRes
                     , Beseder.Resources.State.ImpRes
                     , Beseder.Resources.State.BinarySwitch
                     , Beseder.Resources.State.StateLogger  
                     , Beseder.Resources.Monitor.BinaryMonitorRes
                     , Beseder.Resources.Timer
                     , Beseder.Resources.Monitor
                     , Beseder.Resources.Comm
                     , Beseder.Resources.Composite
                     , Beseder.Resources.ResourceDef
                     , Beseder.Misc.Misc
                     , Beseder.Misc.Prosumers
  other-modules:       Beseder.Base.Internal.Classes
                     , Beseder.Base.Internal.Cont
                     , Beseder.Base.Internal.Core
                     , Beseder.Base.Internal.Flow
                     , Beseder.Base.Internal.Named
                     , Beseder.Base.Internal.NamedVar
                     , Beseder.Base.Internal.SplitFlow
                     , Beseder.Base.Internal.SplitOps
                     , Beseder.Base.Internal.TupleHelper
                     , Beseder.Base.Internal.TypeExp
                     , Beseder.Base.Internal.StHelper
                     , Beseder.Base.Internal.NatOne
                     , Beseder.Base.Internal.STransIx 
                     , Beseder.Base.Internal.STransDef 
                     , Beseder.Base.Internal.STransProc
                     , Beseder.Base.Internal.STransData 
                     , Beseder.Base.Internal.STransDataDo 
                     , Beseder.Base.Internal.STransDataIntrp 
                     , Beseder.Base.Internal.STransMonad 
                     , Beseder.Base.Internal.STransIxDo 
                     , Beseder.Base.Internal.STransDataCombo
                     , Beseder.Base.Internal.STransFunc
                     , Beseder.Utils.ListHelper
                     , Beseder.Utils.BoolHelper
                     , Beseder.Utils.Lst
                     , Beseder.Utils.VariantHelper 
                     , Beseder.Misc.TaskPosterImpl.CallbackQueue
                     , Beseder.Misc.TaskPosterImpl.TaskQ
                     , Beseder.Misc.Prosumers.AsyncProducer
                     , Beseder.Misc.Prosumers.TVarConsumer
                     , Beseder.Misc.Prosumers.Consumer
                     , Beseder.Misc.Prosumers.Producer
                     , Beseder.Misc.Prosumers.STMConsumer
                     , Beseder.Misc.Prosumers.STMProducer
                     , Beseder.Misc.Prosumers.IntervalProducer
                     , Beseder.Resources.State.Impl.IORefStateProv
                     , Beseder.Resources.State.Impl.PureStateProv
                     , Beseder.Resources.State.Impl.STMStateProv
                     , Beseder.Resources.State.MonoStateProv  
                     , Beseder.Resources.Timer.TimerResImpl
                     , Beseder.Resources.Timer.TimerRes
                     , Beseder.Resources.Timer.PaceRes
                     , Beseder.Resources.Comm.CommProv
                     , Beseder.Resources.Comm.CommProvImpl
                     , Beseder.Resources.Comm.Impl.Console
                     , Beseder.Resources.Comm.Impl.WSClient
                     , Beseder.Resources.Comm.Impl.STMComm
                     , Beseder.Resources.Composite.CompositeRes
                     , Beseder.Resources.Composite.CompositeDataRes
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , network
                     , text
                     , containers
                     , async
                     , stm
                     , haskus-utils
                     , mtl
                     , random
                     , websockets
                     , network
                     , bytestring
                     , template-haskell
                     , alarmclock
                     , type-errors
                     , process
                     , pretty-simple
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/oofp/Beseder
